Fixed markuperror and removed fonts and set title

--- a/index.html
+++ b/index.html
@@ -3,20 +3,15 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Listen To The Clouds</title>
+    <title>Listen To The Clouds - Live as the world flies</title>
+    <meta name="description" content="Background noise while you work or relax. Listen to live streamed air traffic radio chatter."
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:image" content="http://listentothe.cloud/share4.jpg" />
     <meta property="og:type" content="website" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.2.1/vue.min.js"></script>
-
-    <!-- Include in <head> to load fonts from Google -->
-    <link href='https://fonts.googleapis.com/css?family=Lora:400italic' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Montserrat:400' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="fonts/stylesheet.css">
     <link rel="stylesheet" href="styles.css">
-
-
     <script>
         (function (i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
@@ -58,10 +53,10 @@
         <span class="dot"></span>Live: &nbsp <span class="current"> Chicago</span>
     </div>
 
-
-    <div id="noise">Background noise while you work or relax</p>
-        <p class="mobilewarning">(Works better if you are not on a mobile device... sorry) </div>
-
+    <div id="noise">
+        Background noise while you work or relax
+        <p class="mobilewarning">(Works better if you are not on a mobile device... sorry)</p>
+    </div>
 
     <div id="vidtop-content">
         <!-- Load Facebook SDK for JavaScript -->
