--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Listen To The Clouds - Live as the world flies</title>
-    <meta name="description" content="Background noise while you work or relax. Listen to live streamed air traffic radio chatter."
+    <meta name="description" content="Background noise while you work or relax. Listen to live streamed air traffic radio chatter." />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:image" content="http://listentothe.cloud/share4.jpg" />
     <meta property="og:type" content="website" />
