--- a/index.html
+++ b/index.html
@@ -42,12 +42,15 @@
 </head>
 
 <body>
-    <div class="video-background">
+    <div id="viewport">
+        <div id="world"></div>
+    </div>
+    <!--<div class="video-background">
         <div class="video-foreground">
             <iframe id="video" src="https://www.youtube.com/embed/YgmIibSnZs0?controls=0&showinfo=0&rel=0&autoplay=1&loop=1&playlist=YgmIibSnZs0&enablejsapi=1"
                 frameborder="0" allowfullscreen></iframe>
         </div>
-    </div>
+    </div>-->
 
     <div id="live">
         <span class="dot"></span>Live: &nbsp <span class="current"> Chicago</span>
