--- a/index.html
+++ b/index.html
@@ -61,14 +61,12 @@
     <div id="vidtop-content">
         <!-- Load Facebook SDK for JavaScript -->
         <div id="fb-root"></div>
-
-
         <script>
             (function (d, s, id) {
                 var js, fjs = d.getElementsByTagName(s)[0];
                 if (d.getElementById(id)) return;
                 js = d.createElement(s); js.id = id;
-                js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.8&appId=1284548061596480";
+                js.src = "https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.8&appId=1284548061596480";
                 fjs.parentNode.insertBefore(js, fjs);
             }(document, 'script', 'facebook-jssdk'));
         </script>
@@ -90,7 +88,9 @@
                 <h1 class="ybile-r2">Listen to the clouds</h1>
                 <h1 class="ybile-r3">live, as the world flies</h1>
                 <div style="text-align:center; margin-top:60px">
-                    <div class="fb-share-button" data-href="http://listentothe.cloud/" data-layout="button_count" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Flistentothe.cloud%2F&amp;src=sdkpreparse">Share</a></div>
+                    <div class="fb-share-button" data-href="http://listentothe.cloud/" data-layout="button_count" data-size="large" data-mobile-iframe="true">
+                        <a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Flistentothe.cloud%2F&amp;src=sdkpreparse">Share</a>
+                    </div>
                 </div>
 
                 <h1 style="margin-top:60px">Airports</h1>
