anders photo at the end

--- a/index.html
+++ b/index.html
@@ -158,6 +158,9 @@
                         the ambient music playing from soundcloud is linked above. Built with love and whipped cream by Anders.
                 </div>
 
+                                 <a href="http://twitter.com/andersaberg"><img src="andersaberg.jpg" class="me-img"></a>
+
+
                 <div style="text-align:center" class="donate">
                     <p>Would you donate to support this?</p>
                     <div id="supportbtns">
@@ -165,10 +168,14 @@
                     <div id="support">
                         <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=QESTW8XN5RYTL" target="_blank" class="btn">Thank you - Click here to donate any amount you want</a>
                     </div>
+
                 </div>
+
             </div>
+
         </div>
     </div>
+
 
 <script src="https://use.fontawesome.com/2d8e1bc7c7.js"></script>
     <script src="https://w.soundcloud.com/player/api.js"></script>
