--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                         /><br /> It uses a bunch of open API's, all mentioned below. Inspired by <a href=" http://youarelistening.to/">You are listening to</a>.
                         Thank you <a href="http://www.liveatc.net/">Live ATC</a> for live feeds of flight radio. The video
                         background is from <a href="https://www.youtube.com/watch?v=YgmIibSnZs0">this youtube clip</a>. Some CSS animations are from the beautiful <a href="http://tobiasahlin.com/spinkit/">SpinKit project</a> by Tobias Ahlin. And
-                        the ambient music playing from soundcloud is linked above. Built with love and whipped cream by Anders with awesome contributions by <a href="http://www.agnesstenlund.com/">Agnes Stenlund</a>. 
+                        the ambient music playing from soundcloud is linked above. Built with love and whipped cream by Anders with awesome contributions from <a href="http://www.agnesstenlund.com/">Agnes Stenlund</a>. 
                                  </br> </br>
                                  <a href="http://twitter.com/andersaberg"><img src="andersaberg.jpg" class="me-img"></a>
 
