Added UK & Germany warning

--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
                 <ul id="picker">
                     <li><a target="_blank" href="https://twitter.com/home?status=Hey%20%40andersaberg,%20I%20would%20like%20you%20to%20add%20*your%20missing%20airport*%20%23listentotheclouds">Missing your airport?</a></li>
                 </ul>
+                <p>Please note that UK &amp; Germany is not available due to legal reasons.</p>
 
 
                 <!---		<p>Live: <span class="current">Chicago</span></p> -->
