Added russian lang test

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
 
                 <div style="text-align:center" class="donate">
-                        <button id="yesbtn"><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=QESTW8XN5RYTL" target="_blank" class="btn"> Donate to support this </a></button>
+                        <button id="yesbtn"><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=QESTW8XN5RYTL" target="_blank" id="donatebtn" class="btn"> Donate to support this </a></button>
                     </div>
                 </div>
             </div>
@@ -180,7 +180,7 @@
 
 <script src="https://use.fontawesome.com/2d8e1bc7c7.js"></script>
     <script src="https://w.soundcloud.com/player/api.js"></script>
-    <script src="app.js?v3"></script>
+    <script src="app.js?v4"></script>
     
     
 </body>
