replaced broken video with working(?)
Weird crashes in chrome

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
     <div class="video-background">
         
         <div class="video-foreground">
-            <iframe id="video" src="https://www.youtube.com/embed/YgmIibSnZs0?controls=0&showinfo=0&rel=0&autoplay=1&loop=1&playlist=YgmIibSnZs0&enablejsapi=1"
-                frameborder="0" allowfullscreen></iframe>
+            <iframe id="video" width="1280" height="720" src="https://www.youtube-nocookie.com/embed/YgmIibSnZs0?rel=0&amp;controls=0&amp;showinfo=0&amp;enablejsapi=1&amp;autoplay=1&amp;loop=1" frameborder="0" allowfullscreen></iframe>
+            
         </div>
         <div class="skyloader"></div>
     </div>
