Added Patreon and removed btc

--- a/index.html
+++ b/index.html
@@ -112,10 +112,11 @@
                     <div id="supportbtns">
                         <button id="yesbtn" @click="donateYes">Yes</button><button id="nobtn" @click="donateNo">No</button></div>
                     <div id="support">
-                        <h1>Thank you for supporting me!</h1>
+                        <h1>You will make me smile!</h1>
+                        <a href="https://www.patreon.com/abergs" class="btn">Become a Patreon</a> or
                         <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=QESTW8XN5RYTL" target="_blank" id="donatepp" class="btn">PayPal</a>
-                        <a href="bitcoin:147mn3ptsdGGDvV15p4TSzauHd9xaKFogm" class="btn btcbtn">Bitcoin BTC, click for QR</a>
-                        <a href="eth:0x2083fEB3d13aEd25D59c9Dc46A0505D6F64398B8" class="btn ethbtn">ETH, click for QR</a>
+                        <!-- <a href="bitcoin:147mn3ptsdGGDvV15p4TSzauHd9xaKFogm" class="btn btcbtn">Bitcoin BTC, click for QR</a>
+                        <a href="eth:0x2083fEB3d13aEd25D59c9Dc46A0505D6F64398B8" class="btn ethbtn">ETH, click for QR</a> -->
                         
                         <div class="wallet btc" style="display:none" >
                             <img src="btc.png" alt="BTC wallet code"/>
