Use soundcloud widget api
Instead of outdated Widget-JS-API which resulted in soundcloud widget not working correctly anymore.

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 <h1 style="margin-top:3rem;">Ambient music</h1>
                 <p style="text-align:center">Volume: <input id="vc_control" type="range" min="0" max="100" value="100" /></p>
                 <div style="text-align:center;">
-                    <iframe id="soundcloud_player_iframe" width="480" height="300" scrolling="no" frameborder="no" src=""></iframe>
+                    <iframe id="soundcloud_player_iframe" width="480" height="300" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/5281179&auto_play=true"></iframe>
                 </div>
 
                 <br />
