--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="video-background">
         
         <div class="video-foreground">
-            <iframe id="video" width="1280" height="720" src="https://www.youtube-nocookie.com/embed/YgmIibSnZs0?rel=0&amp;controls=0&amp;showinfo=0&amp;enablejsapi=1&amp;autoplay=1&amp;loop=1" frameborder="0" allowfullscreen></iframe>
+            <!-- <iframe id="video" width="1280" height="720" src="https://www.youtube-nocookie.com/embed/YgmIibSnZs0?rel=0&amp;controls=0&amp;showinfo=0&amp;enablejsapi=1&amp;autoplay=1&amp;loop=1" frameborder="0" allowfullscreen></iframe> -->
             
         </div>
         <div class="skyloader"></div>
@@ -204,8 +204,7 @@
                     <p class="thankyoutext">This project was built by <a href="http://andersaberg.com">Anders Åberg</a> (<a href="http://twitter.com/andersaberg">@andersaberg</a>).
                         If you like this or want me to add more airports, ping me on twitter - it will make me smile. <br
                         /><br /> It uses a bunch of open API's, all mentioned below. Inspired by <a href=" http://youarelistening.to/">You are listening to</a>.
-                        Thank you <a href="http://www.liveatc.net/">Live ATC</a> for live feeds of flight radio. The video
-                        background is from <a href="https://www.youtube.com/watch?v=YgmIibSnZs0">this youtube clip</a>. Some CSS animations are from the beautiful <a href="http://tobiasahlin.com/spinkit/">SpinKit project</a> by Tobias Ahlin. And
+                        Thank you <a href="http://www.liveatc.net/">Live ATC</a> for live feeds of flight radio. Some CSS animations are from the beautiful <a href="http://tobiasahlin.com/spinkit/">SpinKit project</a> by Tobias Ahlin. And
                         the ambient music playing from soundcloud is linked above. Built with love and whipped cream by Anders with awesome contributions from Agnes Stenlund. 
                                  </br> </br>
                                  <a href="http://twitter.com/andersaberg"><img src="andersaberg.jpg" class="me-img"></a>
