--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
 
                 <!---		<p>Live: <span class="current">Chicago</span></p> -->
-                <audio id="stream" src="" autoplay controls volume="0.4" style="visibility: hidden" crossOrigin="anonymous">
+                <audio id="stream" src="" autoplay controls volume="0.4" style="visibility: hidden">
                     <p>Your browser does not support the <code>audio</code> element.</p>
                 </audio>
 
